--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -136,8 +136,12 @@
       <div class="form-check my-4">
         <input class="form-check-input" type="checkbox" value="" id="termsAndConditions">
         <small class="mx-4 form-text text-muted">By creating an account you are agreeing to our Terms & Conditions and Privacy & Cookie Policy.</small>
-    </form>
       </div>
+      <div class="form-check my-4">
+        <input class="form-check-input" type="checkbox" value="" id="termsAndConditions">
+        <small class="mx-4 form-text text-muted">Remember me on this device.</small>
+      </div>
+    </form>
     </div>
   </div>
 
