--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -116,7 +116,8 @@
             <input type="password" class="form-control border-bottom" id="passwordInput">
           </div>
           <a href="#" class="d-flex justify-content-end font-size-small mb-4" data-toggle="modal" data-target="#forgottenPassword">Forgotten Passowrd?</a>
-          <button type="submit" class="btn btn-secondary">Sign In</button>
+         <!-- sign in -->
+          <button onclick="signMeOut()" type="submit" class="btn btn-secondary btn-signin">Sign In</button>
         </form>
       </div>
       <div class="col-md-6 px-md-7 d-flex flex-column">
@@ -135,8 +136,8 @@
             </div>
             <div class="modal-body d-flex justify-content-center">
               <div class="form-group w-75">
-                <label for="emailInput">Email address</label>
-                <input type="email" class="form-control border-bottom" id="emailInput" aria-describedby="emailHelp">
+                <label for="emailInputReset">Email address</label>
+                <input type="email" class="form-control border-bottom" id="emailInputReset" aria-describedby="emailHelp">
               </div>
             </div>
             <div class="modal-footer">
