--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -117,7 +117,7 @@
           </div>
           <a href="#" class="d-flex justify-content-end font-size-small mb-4" data-toggle="modal" data-target="#forgottenPassword">Forgotten Passowrd?</a>
          <!-- sign in -->
-          <button onclick="signMeOut()" type="submit" class="btn btn-secondary btn-signin">Sign In</button>
+          <button type="submit" class="btn btn-secondary btn-signin">Sign In</button>
         </form>
       </div>
       <div class="col-md-6 px-md-7 d-flex flex-column">
