add recommender system to all pages

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -151,6 +151,31 @@
     </div>
   </div>
 
+
+      <!-- pop up recommendation -->
+      <div class="box overflow-hidden">
+        <div class="row mx-0">
+            <div class="col-6 px-0">
+                <div class="row mx-0 d-flex flex-column align-items-center">
+                    <h6 class="mt-2 font-weight-light">Recommended for you</h6>
+                    <h4 class="mt-5 font-size-medium">Brown Dining Table</h4>
+                    <h5 class="mt-3 l-spacing">£150.00</h5>
+                    <a href="" class="btn-custom btn-custom--dark my-4 align-self-center">Shop now</a>
+                </div>
+            </div>
+            <div class="col-6 px-0">
+                <div class="closeBtn-wrapper">
+                    <i class="bi bi-x closeBtn recommendedBtn"></i>
+                </div>
+                <a href="">
+                    <img src="./images/diningtables/diningtable1.jpg" alt="brown dining table" class="img-fit">
+                </a>
+            </div>
+        </div>
+    </div>
+    <button class="recommended-btn-style recommendedBtn"><i class="bi bi-lightbulb-fill text-white"></i></button>
+
+
   <div class="row bg-custom mx-0 py-4 mb-7 d-flex align-items-center">
     <div class="col-lg-7 mb-4 mb-md-0 ">
       <div class="container px-2 px-md-5">
