--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -14,21 +14,21 @@
             <a class="navbar-brand mr-auto first-nav__fixed" href="#">Mebel</a>
             <ul class="navbar-nav flex-row mr-lg-0 nav-icons first-nav__fixed">
                 <li>
-                  <a href="./login.html">
-                    <i class="bi bi-person"></i>
-                  </a>
+                    <a href="./login.html">
+                        <i class="bi bi-person"></i>
+                    </a>
                 </li>
                 <li>
-                  <a href="">
-                    <i class="bi bi-heart"></i>
-                  </a>
+                    <a href="">
+                        <i class="bi bi-heart"></i>
+                    </a>
                 </li>
                 <li>
-                  <a href="">
-                    <i class="bi bi-cart3"></i>
-                  </a>
+                    <a href="">
+                        <i class="bi bi-cart3"></i>
+                    </a>
                 </li>
-              </ul>
+            </ul>
             </div>
             <button class="navbar-toggler ml-lg-0" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -100,8 +100,9 @@
             <div class="card my-4">
                 <div class="card-header p-0" id="headingOne">
                     <h2 class="mb-0">
-                        <button class="btn btn-link btn-block text-left p-0 d-flex justify-content-between filter-size" type="button" data-toggle="collapse"
-                            href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">
+                        <button class="btn btn-link btn-block text-left p-0 d-flex justify-content-between filter-size"
+                            type="button" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false"
+                            aria-controls="collapseOne">
                             Category
                             <span>
                                 <i class="bi bi-plus"></i>
@@ -126,8 +127,10 @@
             <div class="card my-4">
                 <div class="card-header p-0" id="headingTwo">
                     <h2 class="mb-0">
-                        <button class="btn btn-link btn-block text-left p-0 border-top pt-3 d-flex justify-content-between filter-size" type="button" data-toggle="collapse"
-                            href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
+                        <button
+                            class="btn btn-link btn-block text-left p-0 border-top pt-3 d-flex justify-content-between filter-size"
+                            type="button" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false"
+                            aria-controls="collapseTwo">
                             Price
                             <span>
                                 <i class="bi bi-plus"></i>
@@ -139,18 +142,20 @@
                     <div class="card-body p-0 pt-3">
                         <form>
                             <div class="form-group">
-                              <label for="formControlRange">Example Range input</label>
-                              <input type="range" class="form-control-range" id="formControlRange">                        
+                                <label for="formControlRange">Example Range input</label>
+                                <input type="range" class="form-control-range" id="formControlRange">
                             </div>
-                          </form>
+                        </form>
                     </div>
                 </div>
             </div>
             <div class="card my-4">
                 <div class="card-header p-0" id="headingThree">
                     <h2 class="mb-0">
-                        <button class="btn btn-active btn-link btn-block text-left p-0 border-top pt-3 d-flex justify-content-between filter-size" type="button" data-toggle="collapse"
-                            data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <button
+                            class="btn btn-active btn-link btn-block text-left p-0 border-top pt-3 d-flex justify-content-between filter-size"
+                            type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+                            aria-controls="collapseThree">
                             Colour
                             <span>
                                 <i class="bi bi-plus"></i>
@@ -165,16 +170,18 @@
                             <li><a href="#">Grey</a></li>
                             <li><a href="#">Green</a></li>
                             <li><a href="#">Pink</a></li>
-                            <li><a href="#">Brown</a></li>                        
-                        </ul>    
+                            <li><a href="#">Brown</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div class="card my-4">
                 <div class="card-header p-0" id="headingFour">
                     <h2 class="mb-0">
-                        <button class="btn btn-active btn-link btn-block text-left p-0 border-top pt-3 d-flex justify-content-between filter-size" type="button" data-toggle="collapse"
-                            data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        <button
+                            class="btn btn-active btn-link btn-block text-left p-0 border-top pt-3 d-flex justify-content-between filter-size"
+                            type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
+                            aria-controls="collapseFour">
                             Material
                             <span>
                                 <i class="bi bi-plus"></i>
@@ -189,12 +196,12 @@
                             <li><a href="#">Plastic</a></li>
                             <li><a href="#">Wood</a></li>
                             <li><a href="#">Leather</a></li>
-                            <li><a href="#">Velvet</a></li>                        
+                            <li><a href="#">Velvet</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
-            
+
         </div>
         <div class="col-md-10">
 
@@ -358,48 +365,49 @@
         </div>
     </main>
 
-      <!-- pop up recommendation -->
-      <div class="box overflow-hidden">
+    <!-- pop up recommendation -->
+    <div class="box overflow-hidden">
         <div class="row mx-0">
-          <div class="col-6 px-0">
-            <div class="row mx-0 d-flex flex-column align-items-center">
-              <h6 class="mt-2 font-weight-light">Recommended for you</h6>
-              <h4 class="mt-5 font-size-medium">Brown Dining Table</h4>
-              <h5 class="mt-3 l-spacing">£150.00</h5>
-              <a href=""class="btn-custom btn-custom--dark my-4 align-self-center">Shop now</a>
+            <div class="col-6 px-0">
+                <div class="row mx-0 d-flex flex-column align-items-center">
+                    <h6 class="mt-2 font-weight-light">Recommended for you</h6>
+                    <h4 class="mt-5 font-size-medium">Brown Dining Table</h4>
+                    <h5 class="mt-3 l-spacing">£150.00</h5>
+                    <a href="" class="btn-custom btn-custom--dark my-4 align-self-center">Shop now</a>
+                </div>
             </div>
-          </div>
-          <div class="col-6 px-0">
-            <div class="closeBtn-wrapper">
-              <i class="bi bi-x closeBtn recommendedBtn"></i>
+            <div class="col-6 px-0">
+                <div class="closeBtn-wrapper">
+                    <i class="bi bi-x closeBtn recommendedBtn"></i>
+                </div>
+                <a href="">
+                    <img src="./images/diningtables/diningtable1.jpg" alt="brown dining table" class="img-fit">
+                </a>
             </div>
-            <a href="">
-              <img src="./images/diningtables/diningtable1.jpg" alt="brown dining table" class="img-fit">
-            </a>
-          </div>
         </div>
-      </div>
-      <button class="recommended-btn-style recommendedBtn"><i class="bi bi-lightbulb-fill text-white"></i></button>
-  
+    </div>
+    <button class="recommended-btn-style recommendedBtn"><i class="bi bi-lightbulb-fill text-white"></i></button>
+
 
     <div class="row bg-custom mx-0 py-4 mb-7 d-flex align-items-center">
         <div class="col-lg-7 mb-4 mb-md-0 ">
-          <div class="container px-2 px-md-5">
-            <h5 class="pb-3">Join our newsletter for £50 off</h5>
-            <p class="line-height">We'll email you a voucher worth £50 off your first order over £200. By subscribing you
-              agree to our Terms & Conditions and Privacy & Cookies Policy.</p>
-          </div>
+            <div class="container px-2 px-md-5">
+                <h5 class="pb-3">Join our newsletter for £50 off</h5>
+                <p class="line-height">We'll email you a voucher worth £50 off your first order over £200. By
+                    subscribing you
+                    agree to our Terms & Conditions and Privacy & Cookies Policy.</p>
+            </div>
         </div>
         <div class="col-lg-5">
-          <div class="input-group">
-            <input type="text" class="form-control text-center" placeholder="Enter Email" aria-label="Recipient's username"
-              aria-describedby="button-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+            <div class="input-group">
+                <input type="text" class="form-control text-center" placeholder="Enter Email"
+                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
 
 
 
