add links for all products

--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -221,7 +221,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html " class="product-link">
                             <img src="./images/armchairs/greyarmchair.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -234,7 +234,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/diningtables/diningtable2.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -247,7 +247,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/sofas/greensofa.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -260,7 +260,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/diningchairs/blackchair.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -273,7 +273,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/armchairs/pinkarmchair.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -286,7 +286,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/diningtables/diningtable1.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -299,7 +299,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/sofas/bluesofa.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -312,7 +312,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/diningchairs/foldingchair.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -325,7 +325,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/armchairs/bluearmchair.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -338,7 +338,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/diningtables/diningtable.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
@@ -351,7 +351,7 @@
 
                 <div class="col-12 col-md-6 col-lg-4 col-xl-4">
                     <div class="card">
-                        <a href="#" class="product-link">
+                        <a href="./whitechair1.html" class="product-link">
                             <img src="./images/sofas/brownsofa.jpg" alt="" class="card-img-top">
                             <div class="quick-view">Quick view</div>
                             <div class="card-body text-center">
