--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -117,7 +117,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
       <div class="card">
-        <a href="#" class="product-link">
+        <a href="./whitechair1.html " class="product-link">
           <img src="./images/armchairs/greyarmchair.jpg" alt="" class="card-img-top">
           <div class="quick-view">Quick view</div>
           <div class="card-body text-center">
@@ -130,7 +130,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
       <div class="card">
-        <a href="#" class="product-link">
+        <a href="./whitechair1.html" class="product-link">
           <img src="./images/diningtables/diningtable2.jpg" alt="" class="card-img-top">
           <div class="quick-view">Quick view</div>
           <div class="card-body text-center">
@@ -143,7 +143,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 col-xl-3">
       <div class="card">
-        <a href="#" class="product-link">
+        <a href="./whitechair1.html" class="product-link">
           <img src="./images/sofas/greensofa.jpg" alt="" class="card-img-top">
           <div class="quick-view">Quick view</div>
           <div class="card-body text-center">
